pagination articles ready

--- a/templates/article/list.html.twig
+++ b/templates/article/list.html.twig
@@ -11,7 +11,7 @@
 <section class="page">
     <div class="container">
         <div class="page_block page_title_block"></div>
-        <h2 class="page_title">Новости</h2> {{ page }}
+        <h2 class="page_title">Новости</h2>
         <div class="row page_search_row">
             <div class="col-lg-2 d-none d-lg-block">
                 <div class="page_search_res">найдено {{ articles|length }} статей</div>
