--- a/templates/article/list.html.twig
+++ b/templates/article/list.html.twig
@@ -22,7 +22,7 @@
             </div>
             <div class="col-lg-5 col-md-12">
                 <div class="page_sort">
-                    Сортировать: <a class="page_sort_type" id="sort_alp_asc" href="#">по алфавиту</a> / <a href="#">по релевантности</a> / <a href="#">по популярности</a> / <a href="#">по дате</a>
+                    Сортировать: <a class="page_sort_type" id="sort_date_asc" href="#">по дате</a> / <a class="page_sort_type" id="sort_likes_asc" href="#">по лайкам</a> / <a class="page_sort_type" id="sort_views_asc" href="#">по популярности</a>
                 </div>
 
 
@@ -115,12 +115,24 @@
             $('.page_sort_type').removeClass('page_sort_active');
             $(this).addClass('page_sort_active');
 
-            if($(this).attr("id") === "sort_alp_asc"){
-                $(this).attr("id", "sort_alp_desc");
-                $(this).html( "по алфавиту▼" );
-            } else{
-                $(this).attr("id", "sort_alp_asc");
-                $(this).html( "по алфавиту▲" );
+            if($(this).attr("id") === "sort_date_asc"){
+                $(this).attr("id", "sort_date_desc");
+                //$(this).html( "по дате▼" );
+            }else if($(this).attr("id") === "sort_date_desc") {
+                $(this).attr("id", "sort_date_asc");
+                //$(this).html( "по дате▲" );
+            }else if($(this).attr("id") === "sort_views_asc"){
+                $(this).attr("id", "sort_views_desc");
+                //$(this).html( "по дате▲" );
+            }else if($(this).attr("id") === "sort_views_desc"){
+                $(this).attr("id", "sort_views_asc");
+                //$(this).html( "по дате▲" );
+            }else if($(this).attr("id") === "sort_likes_asc"){
+                $(this).attr("id", "sort_likes_desc");
+                //$(this).html( "по дате▲" );
+            }else if($(this).attr("id") === "sort_likes_desc") {
+                $(this).attr("id", "sort_likes_asc");
+                //$(this).html( "по дате▲" );
             }
 
             e.preventDefault(); //Prevent Default action.
