--- a/templates/article/list.html.twig
+++ b/templates/article/list.html.twig
@@ -14,7 +14,7 @@
         <h2 class="page_title">Новости</h2>
         <div class="row page_search_row">
             <div class="col-lg-2 d-none d-lg-block">
-                <div class="page_search_res">найдено {{ articles|length }} статей</div>
+                <div class="page_search_res">найдено {{ articles_count }} статей</div>
             </div>
             <div class="col-lg-4 offset-lg-1 d-none d-lg-block">
                 <input class="search page_search header_search" type="text">
@@ -22,7 +22,7 @@
             </div>
             <div class="col-lg-5 col-md-12">
                 <div class="page_sort">
-                    Сортировать: <a class="page_sort_type" id="sort_date_asc" href="#">по дате</a> / <a class="page_sort_type" id="sort_likes_asc" href="#">по популярности</a> / <a class="page_sort_type" id="sort_views_asc" href="#">по просмотрам</a>
+                    Сортировать: <a class="page_sort_type" id="sort_date_asc" href="?sortby=date">по дате</a> / <a class="page_sort_type" id="sort_likes_asc" href="#">по популярности</a> / <a class="page_sort_type" id="sort_views_asc" href="#">по просмотрам</a>
                 </div>
 
 
