--- a/templates/article/list.html.twig
+++ b/templates/article/list.html.twig
@@ -14,7 +14,7 @@
         <h2 class="page_title">Новости</h2>
         <div class="row page_search_row">
             <div class="col-lg-2 d-none d-lg-block">
-                <div class="page_search_res">найдено {{ articles_count }} статей</div>
+                <div class="page_search_res">найдено {{ articles_count|suffix() }} </div>
             </div>
             <div class="col-lg-4 offset-lg-1 d-none d-lg-block">
                 <input class="search page_search header_search" type="text">
