--- a/templates/article/listSection.html.twig
+++ b/templates/article/listSection.html.twig
@@ -14,7 +14,7 @@
             <h2 class="page_title">{{section.name}}</h2>
             <div class="row page_search_row">
                 <div class="col-lg-2 d-none d-lg-block">
-                    <div class="page_search_res">найдено {{ articles|length }} статей</div>
+                    <div class="page_search_res">найдено {{ articles|length|suffix() }} </div>
                 </div>
                 <div class="col-lg-4 offset-lg-1 d-none d-lg-block">
                     <input class="search page_search header_search" type="text">
