--- a/templates/style/list.html.twig
+++ b/templates/style/list.html.twig
@@ -14,7 +14,7 @@
         <h2 class="page_title">Виды пива</h2>
         <div class="row page_search_row">
             <div class="col-lg-2 d-none d-lg-block">
-                <div class="page_search_res">найдено {{ styles|length }} видов</div>
+                <div class="page_search_res">найдено {{ styles|length|suffix('styles') }} </div>
             </div>
             <div class="col-lg-4 offset-lg-1 d-none d-lg-block">
 
